Source/WebCore/rendering/RenderListBox.cpp
@@ -254,8 +254,10 @@ void RenderListBox::computeLogicalHeight()
         m_vBar->setEnabled(enabled);
         m_vBar->setSteps(1, max(1, numVisibleItems() - 1), itemHeight);
         m_vBar->setProportion(numVisibleItems(), numItems());
-        if (!enabled)
+        if (!enabled) {
+            scrollToYOffsetWithoutAnimation(0);
             m_indexOffset = 0;
+        }
     }
 }
 
